--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <div class='dados' id='dado1'></div>
         <div class='dados' id='dado2'></div>
     </div>
-    <button id="tirar">TIRAR DADOS</button>
-
+    <div id="container2">
+        <span id="resultado">Resultado</span>
+        <button id="tirar">TIRAR DADOS</button>
+    </div>
 </body>
 <script src="main.js"></script>
 </html>
